# raw-data-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  Raw_Data_API_Basic_Use.ipynb  app.py  cli  config.txt.sample  docker-compose-config.txt  docker-compose.yml  entrypoint.sh  index.html  populate-docker-db.sh  pyproject.toml  requirements.docker.txt  requirements.txt  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Unit-Test.yml  black-for-PR.yml  black-formatter.yml  build.yml  ci.yml  code-check.yml  docker-image-build.yml  docker-image-push.yml  docker-image.yml  issue_checker.yml  locust.yml  pages.yml  publish_mkdocs.yml  terraform-checks.yml
API/: __init__.py  api_worker.py  custom_exports.py  custom_snapshot.py  data_quality.py  download_export.py  hashtag_stats.py  hdx.py  main.py  mapathon.py  organization.py  osm_users.py  raw_data.py  s3.py  stats.py  status.py  tasking_manager.py  tasks.py  test.py  test_router.py  trainings.py
API/auth/: __init__.py  responses.py  routers.py
API/changesets/: __init__.py  routers.py  utils.py
API/countries/: routers.py
API/data/: hdx.sql  routers.py  tables.sql
API/dataquality/: routers.py
API/mapathon/: __init__.py  routers.py  utils.py
Docker/: Dockerfile  entrypoint.sh
api/API/: index.html
api/endpoints/: index.html
api/src/: index.html
backend/: Manual.md  Readme.md  app  backend  field_update  login.py  raw  raw.lua  raw_backend  raw_with_ref.lua  replication  requirements.txt
backend /: Readme.md  app  app.py  app_config.json  field_update  raw.lua  raw_with_ref.lua  replication  requirements.txt  run.py
backend /countries/: countries_un.csv  countries_un.geojson
backend /sql/: countries_un.sql  post_indexes.sql  pre_indexes.sql
backend/countries/: countries.csv  countries.geojson  countries_geofabrik.csv  countries_geofabrik.geojson
backend/sql/: countires_geofabrik.sql  countries.sql  (+6 more)
code_of_conduct/: index.html
contributing/: index.html
data/: Dockerfile
docs/: CODE_OF_CONDUCT  CONFIG_DOC.md  GETTING_STARTED_WITH_DOCKER.md  SETUP_DEV.md  app.rst  conf.py  index.html  index.rst  mkdocs.yml  openapi.json  osm_stats.app.html  osm_stats.html  osm_stats.validation.html  py-modindex.html
examples/: Example_Python.ipynb
galaxy/: app.py  config.py  db_session.py
infra/: main.tf  outputs.tf  provider.tf  variables.tf
migrations/: 00001.sql
osm_galaxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
osm_stats/: __init__.py  app.py
osmstats/: __init__.py  main.py  test.py
osmstatsmodule/: .gitignore  README.md  afdsfdsf  database_test.py  requirements.txt  sample_call_test.py  setup.py  test_database.py  test_db.py  test_functions.py  test_invalidparam.py  test_query.py  test_secondtest.py
search/: search_index.json
src/: app.py  config.py  config.txt.sample  db_connection.py  duckdb.py  error_module.py  hdx.py  postgres.py  s3.py  stats.py  users.py
tests/: terminal.py  test_API.py  test_app.py  test_functions.py
(+343 files in other folders)
